<resources>
    <string name="app_name">Smapl</string>
    <string name="error_empty_login">Вы не ввели логин</string>
    <string name="error_empty_password">Вы не ввели пароль</string>
    <string name="login">Войти</string>
    <string name="wait_login">Waiting!</string>
    <string name="error_empty_phone_number">Вы не ввели номер телефона</string>
    <string name="error_empty_gender">Вы не ви выбрали пол</string>
    <string name="error_wrong_phone_number">Вы ввели некорректный номер телефона</string>
    <string name="error_phone_number_lenght">Длина номера должна быть 10 цифр</string>
    <string name="error_password_short">Вы ввели слишком короткий пароль</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="forward">forward</string>
    <string name="name">Имя</string>
    <string-array name="gender">
        <item>@string/man</item>
        <item>@string/woman</item>
    </string-array>
    <string name="select_gender">Выберите пол</string>
    <string name="car_model">Модель авто</string>
    <string name="car_year_of_issue">Год выпуска авто</string>
    <string name="load_car_photo">Загрузите фото вашего автомобиля</string>
    <string name="skip">Пропустить</string>
    <string name="back">Назад</string>
    <string name="forward_rus">Вперёд</string>
    <string name="dialog_message">Выберите, откуда загрузить фото</string>
    <string name="dialog_title">Загрузка фото</string>
    <string name="btn_text_from_gallery">Из галереи</string>
    <string name="btn_text_make_photo">Сделать фото</string>
    <string name="input_phone">Телефон</string>
    <string name="input_password">Пароль</string>
    <string name="start">Старт</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="registration_registration">Регистрация</string>
    <string name="hint_interests">Интересы</string>
    <string name="last_name">Фамилия</string>
    <string name="email">E-mail</string>
    <string name="load_photo">Загрузить фото</string>
    <string name="set_car">Машина</string>
    <string name="to_set_car">Редактировать информацию о машине</string>
    <string name="change_password">Изменить пароль</string>
    <string name="hint_car_brand">Марка авто</string>
    <string name="hint_car_model">Модель авто</string>
    <string name="hint_car_year_issue">Год выпуска</string>
    <string name="hint_car_color">Цвет</string>
    <string name="change_password_password">Обо мне</string>
    <string name="hint_old_password">Старый пароль</string>
    <string name="hint_new_password">Новый пароль</string>
    <string name="save">Сохранить</string>
    <string name="forward_rus_2">Далее</string>
    <string name="or">или</string>
    <string name="btn_login_facebook">Войти через Facebook</string>
    <string name="facebook_app_id">137649426800650</string>
    <string name="fb_login_protocol_scheme">fb1690647591244835</string>
    <string name="text_about_yourself">Заполните информацию о себе</string>
    <string name="text_about_yourself_age">Возраст(выбор из диапазона)</string>
    <string name="text_about_yourself_car_brand">Марка авто</string>
    <string name="text_about_yourself_car_color">Цвет авто</string>
    <string name="text_about_yourself_menu">Обо мне</string>
    <string name="error_empty_name">Введите имя</string>
    <string name="error_empty_email">Введите E-mail</string>
    <string name="error_incorrect_email">Вы ввели некорректный E-mail</string>
    <string name="error_empty_car_model">Введите модель автомобиля</string>
    <string name="error_empty_car_year">Введите год выпуска автомобиля</string>
    <string name="error_incorrect_car_year">Вы ввели некорректный год выпуска автомобиля</string>
    <string name="logout">Выйти</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_name">Имя</string>
    <string name="hint_about_me_interests">Интересы</string>
    <string name="age">Возраст</string>
    <string name="about_me">Обо мне</string>
    <string name="about_me_no_changes">Вы не внесли никаких изменений</string>
    <string name="fill_all_fields">Вы заполнили не все обязательные поля</string>
    <string name="changes_saved">Изменения сохранены</string>
    <string name="password_changed">Новый пароль сохранен</string>
    <string name="man">мужчина</string>
    <string name="woman">женщина</string>
    <string name="wrong_age">Некорректный возраст</string>
    <string name="balance_format">Баланс: %.2f баллов</string>
    <string name="campaign_price_format">Стоимость: %d баллов</string>
    <string name="total_earn_withdraw_format">Баланс: %.2f баллов</string>
    <string name="total_earn_format">%.2f баллов</string>
    <string name="earn_format">%.2f</string>
    <string name="drive_format">%.3f км</string>
    <string name="campaign_list">Рекламные кампании</string>
    <string name="obtain_money">Вывод денег</string>
    <string name="edit_about_me">Редактировать личную информацию</string>
    <string name="total_drive">Всего проехали: </string>
    <string name="total_earn">Всего заработали: </string>
    <string name="restore_password">Восстановление пароля</string>
    <string name="mail_address">Введите почтовый адресс</string>
    <string name="send_request">Отправить запрос</string>
    <string-array name="age_entities">
        <item>до 18</item>
        <item>18-25</item>
        <item>25-30</item>
        <item>30-40</item>
        <item>40-50</item>
        <item>больше 50</item>
    </string-array>
    <string-array name="car_brand">
        <item>Acura</item>
        <item>Alfa Romeo</item>
        <item>Alpina</item>
        <item>Alpine</item>
        <item>Aro</item>
        <item>Asia</item>
        <item>Aston Martin</item>
        <item>Audi</item>
        <item>Austin</item>
        <item>BAW</item>
        <item>Beijing</item>
        <item>Bentley</item>
        <item>BMW</item>
        <item>Brilliance</item>
        <item>Bristol</item>
        <item>Bugatti</item>
        <item>Buick</item>
        <item>BYD</item>
        <item>Богдан</item>
        <item>Vector</item>
        <item>Venturi</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
        <item>Vortex</item>
        <item>Wartburg</item>
        <item>Westfield</item>
        <item>Wiesmann</item>
        <item>Wuling</item>
        <item>ВАЗ (Lada)</item>
        <item>Geely</item>
        <item>Geo</item>
        <item>GMC</item>
        <item>Great Wall</item>
        <item>ГАЗ</item>
        <item>Dacia</item>
        <item>Dadi</item>
        <item>Daewoo</item>
        <item>Daihatsu</item>
        <item>Daimler</item>
        <item>Dallas</item>
        <item>Derways</item>
        <item>De Tomaso</item>
        <item>Dodge</item>
        <item>Dong Feng</item>
        <item>Doninvest</item>
        <item>Jeep</item>
        <item>Jiangling</item>
        <item>Jiangnan</item>
        <item>Eagle</item>
        <item>Zastava</item>
        <item>ZX</item>
        <item>ЗАЗ</item>
        <item>ЗИЛ</item>
        <item>Infiniti</item>
        <item>Innocenti</item>
        <item>Invicta</item>
        <item>Iran Khodro</item>
        <item>Isdera</item>
        <item>Isuzu</item>
        <item>IVECO</item>
        <item>Xin Kai</item>
        <item>ИЖ</item>
        <item>Cadillac</item>
        <item>Callaway</item>
        <item>Carbodies</item>
        <item>Caterham</item>
        <item>Citroen</item>
        <item>Cizeta</item>
        <item>Coggiola</item>
        <item>Kia</item>
        <item>Koenigsegg</item>
        <item>Qvale</item>
        <item>КАМАЗ</item>
        <item>Lamborghini</item>
        <item>Lancia</item>
        <item>Land Rover</item>
        <item>Landwind</item>
        <item>Lexus</item>
        <item>Lifan</item>
        <item>Lincoln</item>
        <item>Lotus</item>
        <item>LTI</item>
        <item>Luxgen</item>
        <item>ЛуАЗ</item>
        <item>Mahindra</item>
        <item>Marcos</item>
        <item>Marlin</item>
        <item>Marussia</item>
        <item>Maruti</item>
        <item>Maserati</item>
        <item>Maybach</item>
        <item>Mazda</item>
        <item>McLaren</item>
        <item>Mega</item>
        <item>Mercedes-Benz</item>
        <item>Mercury</item>
        <item>Metrocab</item>
        <item>MG</item>
        <item>Minelli</item>
        <item>Mini</item>
        <item>Mitsubishi</item>
        <item>Mitsuoka</item>
        <item>Monte Carlo</item>
        <item>Morgan</item>
        <item>Москвич</item>
        <item>Nissan</item>
        <item>Noble</item>
        <item>Oldsmobile</item>
        <item>Opel</item>
        <item>Pagani</item>
        <item>Panoz</item>
        <item>Paykan</item>
        <item>Perodua</item>
        <item>Peugeot</item>
        <item>Plymouth</item>
        <item>Pontiac</item>
        <item>Porsche</item>
        <item>Premier</item>
        <item>Proton</item>
        <item>Puma</item>
        <item>Reliant</item>
        <item>Renault</item>
        <item>Rolls-Royce</item>
        <item>Ronart</item>
        <item>Rover</item>
        <item>Saab</item>
        <item>Saleen</item>
        <item>Samsung</item>
        <item>Saturn</item>
        <item>Scion</item>
        <item>SEAT</item>
        <item>Skoda</item>
        <item>SMA</item>
        <item>Smart</item>
        <item>Soueast</item>
        <item>Spectre</item>
        <item>SsangYong</item>
        <item>Subaru</item>
        <item>Suzuki</item>
        <item>СеАЗ</item>
        <item>Talbot</item>
        <item>Tata</item>
        <item>Tatra</item>
        <item>Tianma</item>
        <item>Tofas</item>
        <item>Toyota</item>
        <item>Trabant</item>
        <item>TVR</item>
        <item>ТагАЗ</item>
        <item>УАЗ</item>
        <item>FAW</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>FSO</item>
        <item>Fuqi</item>
        <item>Hafei</item>
        <item>Haima</item>
        <item>Hindustan</item>
        <item>Holden</item>
        <item>Honda</item>
        <item>HuangHai</item>
        <item>Hummer</item>
        <item>Hyundai</item>
        <item>Chana</item>
        <item>ChangFeng</item>
        <item>Changhe</item>
        <item>Chery</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Shifeng</item>
        <item>ShuangHuan</item>
        <item>JAC</item>
        <item>Jaguar</item>
    </string-array>
    <string-array name="car_color">
        <item>красный</item>
        <item>оранжевый</item>
        <item>желтый</item>
        <item>зеленый</item>
        <item>голубой</item>
        <item>синий</item>
        <item>фиолетовый</item>
        <item>серый</item>
        <item>белый</item>
        <item>черный</item>
    </string-array>
    <string-array name="interests">
        <item>Недвижимость</item>
        <item>Транспорт</item>
        <item>Электроника</item>
        <item>Строительство, ремонт</item>
        <item>Мебель, интерьер</item>
        <item>Дом, сад</item>
        <item>Одежда, аксессуары</item>
        <item>Детские товары</item>
        <item>Животные</item>
        <item>Растения</item>
        <item>Красота, здоровье</item>
        <item>Спорт</item>
        <item>Бизнес</item>
        <item>Рестораны, еда</item>
        <item>Клубы, ночная жизнь</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_age">Выберите возраст</string>
    <string name="error_empty_age">Вы не выбрали возраст</string>
    <string name="select_interests">Выберите интересы</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="server_error_full">На сервере произошла непредвиденная ошибка. Пожалуйста, подождите. Она вскоре будет исправлена.</string>
    <string name="txt_btn_return_to_main">Вернуться на главную</string>
</resources>