<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_load_car_photo"
        android:text="@string/load_car_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/img_car_photo"
        android:layout_below="@id/text_load_car_photo"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:layout_width="90dp"
        android:layout_height="90dp" />

    <Button
        android:id="@+id/btn_load_car_photo_skip"
        android:text="@string/skip"
        android:layout_below="@id/img_car_photo"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_load_car_photo_back"
        android:text="@string/back"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_load_car_photo_forward"
        android:text="@string/forward_rus"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>