<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto">

    <data>

        <variable name="password"
                  type="com.smapl_android.model.PasswordForgetVM"/>

        <variable
                name="presenter"
                type="com.smapl_android.ui.fragments.ForgetPasswordFragment.Presenter"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="6dp"
            android:background="@drawable/bg">
        <com.smapl_android.ui.widgets.SimpleTopBar
                android:id="@+id/linear_change_password_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:leftText="@string/back"
                custom:centerText="@string/restore_password"
                custom:leftClick="@{() -> presenter.onClickBack()}"/>


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/mail_address"
                android:textSize="@dimen/core_text_size"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_line_background"
                android:hint="@string/email"
                android:text="@={password.email}"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/core_text_size"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_facebook_hight"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_facebook_shape"
                android:text="@string/send_request"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/core_text_size"
                android:onClick="@{() -> presenter.sendRequest()}"/>


    </LinearLayout>
</layout>