<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/error_500_bg">

    <TextView
        android:id="@+id/txt_server_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="350dp"
        android:text="@string/server_error"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_server_error_full"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_server_error"
        android:layout_centerHorizontal="true"
        android:text="@string/server_error_full"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <FrameLayout
        android:id="@+id/layout_return_to_main"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/txt_server_error_full"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:background="@color/btn_to_retry_bg"
        >

        <TextView
            android:text="@string/txt_btn_return_to_main"
            android:textColor="#fefefe"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:letterSpacing="-0.03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

</RelativeLayout>