<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.smapl_android.model.UserInfoViewModel" />

        <variable
            name="presenter"
            type="com.smapl_android.ui.fragments.AboutYourselfFragment.Presenter" />

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_about_yourself_menu"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@color/background_blue"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_about_yourself_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="@{() -> presenter.onClickBack()}"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_menu_bottom_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="11dp"
                    android:layout_weight="5"
                    android:background="@android:color/transparent"
                    android:text="@string/text_about_yourself_menu"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_menu_bottom_size" />

                <Button
                    android:id="@+id/btn_about_yourself_forward"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="@{() -> presenter.onClickForward()}"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_menu_bottom_size" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_about_yourself"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/text_about_yourself"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edit_about_yourself_name"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:text="@{user.name}"
                android:textColorHint="@color/about_yourself_hint"
                app:addTextChangedListener="@{user.nameTextWatcher}" />

            <!--<EditText
                android:id="@+id/edit_about_yourself_email"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_yourself_indent"
                android:hint="@string/email"
                android:text="@{user.email}"
                android:textColorHint="@color/about_yourself_hint"
                app:addTextChangedListener="@{user.emailTextWatcher}" />-->


            <!-- <EditText
                 android:id="@+id/edit_gender_registration"
                 style="@style/TextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"

                 android:textColorHint="@color/about_yourself_hint" />

             <View
                 android:id="@+id/view_gender_registration"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_alignBottom="@id/edit_gender_registration"
                 android:layout_alignTop="@id/edit_gender_registration"/>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="@dimen/about_yourself_indent">

                <Spinner
                    android:id="@+id/spinner_gender_registration"
                    style="@style/spinner_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/gender" />

                <TextView
                    android:id="@+id/txt_spinner_gender_default"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:text="@string/gender" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/spinner_gender_registration"
                    android:background="@color/about_yourself_hint" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_yourself_indent"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_about_yourself_age"
                    android:textColor="@color/about_yourself_hint" />

                <Spinner
                    android:id="@+id/spinner_about_yourself_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:entries="@array/age"></Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_yourself_indent"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_about_yourself_car_brand" />

                <Spinner
                    android:id="@+id/spinner_about_yourself_car_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:entries="@array/car_brand"></Spinner>

            </LinearLayout>

            <EditText
                android:id="@+id/edit_about_yourself_car_model"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_yourself_indent"
                android:hint="@string/car_model"
                android:imeOptions="actionDone"
                android:text="@{user.carModel}"
                app:addTextChangedListener="@{user.carModelTextWatcher}" />

            <EditText
                android:id="@+id/edit_about_yourself_car_yaer_of_issue"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_yourself_indent"
                android:hint="@string/car_year_of_issue"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="4"
                android:text="@{user.carYearOfIssue}"
                app:addTextChangedListener="@{user.carYearTextWatcher}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_yourself_indent"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_about_yourself_car_color" />

                <Spinner
                    android:id="@+id/spinner_about_yourself_car_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:entries="@array/car_color"></Spinner>

            </LinearLayout>

            <EditText
                android:id="@+id/edit_about_yourself_interests"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="182dp"
                android:layout_marginTop="@dimen/about_yourself_indent"
                android:hint="@string/hint_interests"
                android:text="@{user.interests}"
                app:addTextChangedListener="@{user.interestsTextWatcher}" />

        </LinearLayout>
    </ScrollView>
</layout>