<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.smapl_android.model.UserInfoViewModel" />

        <variable
            name="presenter"
            type="com.smapl_android.ui.fragments.SetCarFragment.Presenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical">

        <com.smapl_android.ui.widgets.SimpleTopBar
                android:id="@+id/linear_edit_car_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:leftText="@string/back"
                custom:centerText="@string/set_car"
                custom:rightText="@string/save"
                custom:leftClick="@{() -> presenter.onBackClicked()}"
                custom:rightClick="@{() -> presenter.onSaveClicked()}"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_circle_set_car_photo"
                android:layout_width="@dimen/image_car_circle_size"
                android:layout_height="@dimen/image_car_circle_size"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/audi" />

            <TextView
                android:id="@+id/text_set_car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_toRightOf="@id/img_circle_set_car_photo"
                android:text="@{user.oldName}"
                android:textColor="@android:color/white"
                android:textSize="@dimen/name_profile_size" />

            <TextView
                android:id="@+id/text_set_car_car_brand_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/text_set_car_name"
                android:layout_below="@id/text_set_car_name"
                android:text="@{user.carBrand + ' ' + user.carModel}"
                android:textColor="@android:color/white"
                android:textSize="@dimen/car_brand_model_profile_size" />

            <LinearLayout
                android:id="@+id/linear_set_car_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_line_background"
                android:paddingTop="@dimen/edit_password_edit_padding_top"
                android:layout_below="@id/img_circle_set_car_photo"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_car_brand"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/core_text_size" />

                <Spinner
                    android:id="@+id/spinner_set_car_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:entries="@array/car_brand"></Spinner>

            </LinearLayout>

            <EditText
                android:id="@+id/edit_set_car_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_set_car_brand"
                android:addTextChangedListener="@{user.carModelTextWatcher}"
                android:background="@drawable/edit_text_line_background"
                android:hint="@string/hint_car_model"
                android:text="@{user.carModel}"
                android:paddingTop="@dimen/edit_password_edit_padding_top"
                android:textSize="@dimen/core_text_size"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/edit_set_car_year_issue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_set_car_model"
                android:addTextChangedListener="@{user.carYearTextWatcher}"
                android:background="@drawable/edit_text_line_background"
                android:hint="@string/hint_car_year_issue"
                android:inputType="number"
                android:maxLength="4"
                android:text="@{user.carYearOfIssue}"
                android:paddingTop="@dimen/edit_password_edit_padding_top"
                android:textSize="@dimen/core_text_size"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/edit_set_car_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_set_car_year_issue"
                android:paddingTop="@dimen/edit_password_edit_padding_top"
                android:addTextChangedListener="@{user.carColorTextWatcher}"
                android:background="@drawable/edit_text_line_background"
                android:hint="@string/hint_car_color"
                android:text="@{user.color}"
                android:textSize="@dimen/core_text_size"
                android:textColorHint="@android:color/white" />


        </RelativeLayout>

    </LinearLayout>
</layout>